fix dialogs on mobile

--- a/src/components/Dialogs/dialogStyle.scss
+++ b/src/components/Dialogs/dialogStyle.scss
@@ -137,3 +137,9 @@ dialog {
         }
     }
 }
+
+@media (max-width: 768px)  {
+    dialog {
+        max-width: 85%;
+    }
+}
